# fastapi_docker_template

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
src/: __main__.py  api.py  cli.py  config.py  db.py  models.py  schemas.py
tests/: test_sample.py
