[tool.poetry]
name = "fastapi_docker_template"
version = "0.1.0"
description = ""
authors = ["yourname <yourname@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
SQLAlchemy = "^1.3.22"
SQLAlchemy-Utils = "^0.36.8"
psycopg2-binary = "^2.8.6"
typer = "^0.3.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
mypy = "^0.790"
debugpy = "^1.2.1"
pytest = "^6.2.1"
ipykernel = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

